--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 [
-        {
+    {
         "guid": "d20aa9ed-eafc-4578-b320-4e3b7093129c",
         "name": "FinTube",
         "overview": "Import Videos/Music from YouTube",
@@ -8,6 +8,14 @@
         "category": "General",
         "imageUrl": "https://raw.githubusercontent.com/AECX/FinTube/master/Assets/logo.png",
         "versions": [
+            {
+                "version": "1.0.1.1",
+                "changelog": "Fix authorization",
+                "targetAbi": "10.8.10.0",
+                "sourceUrl": "https://github.com/vincentroyc/FinTube/releases/download/release%2F1.0.1.1/Jellyfin.Plugin.FinTube.zip",
+                "checksum": "a1fee2dc23a1c761356fb5b9458d4ded",
+                "timestamp": "2024-05-12T11:40:00Z"
+            },
             {
                 "version": "1.0.1.0",
                 "changelog": "Initial Release",
