--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
         "imageUrl": "https://raw.githubusercontent.com/AECX/FinTube/master/Assets/logo.png",
           "versions": [
             {
+                "version": "1.1.0.1",
+                "changelog": "Fix yt-dlp command build",
+                "targetAbi": "10.8.10.0",
+                "sourceUrl": "https://github.com/vincentroyc/FinTube/releases/download/release%2F1.1.0.1/Jellyfin.Plugin.FinTube.zip",
+                "checksum": "710c7214491dde5fb228429d9e98a9e0",
+                "timestamp": "2025-09-23T07:13:30Z"
+              },
+            {
               "version": "1.1.0.0",
               "changelog": "Added possibility to provide a custom filename",
               "targetAbi": "10.8.10.0",
