--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
         "imageUrl": "https://raw.githubusercontent.com/AECX/FinTube/master/Assets/logo.png",
           "versions": [
             {
+                "version": "1.1.0.3",
+                "changelog": "Add vorbiscomment config for free format audio tagging (vorbis-tool package)",
+                "targetAbi": "10.8.10.0",
+                "sourceUrl": "https://github.com/vincentroyc/FinTube/releases/download/release%2F1.1.0.3/Jellyfin.Plugin.FinTube.zip",
+                "checksum": "4032226cf8ed47a7991ad9b3693c0be6",
+                "timestamp": "2025-10-29T16:45:0Z"
+            },
+            {
                 "version": "1.1.0.2",
                 "changelog": "Fix yt-dlp command build",
                 "targetAbi": "10.8.10.0",
