--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
         "imageUrl": "https://raw.githubusercontent.com/AECX/FinTube/master/Assets/logo.png",
           "versions": [
             {
+                "version": "1.1.0.4",
+                "changelog": "Force vorbis as free format audio",
+                "targetAbi": "10.8.10.0",
+                "sourceUrl": "https://github.com/vincentroyc/FinTube/releases/download/release%2F1.1.0.4/Jellyfin.Plugin.FinTube.zip",
+                "checksum": "b1d4edd167559420d6bc2c3f8ebb9dba",
+                "timestamp": "2025-10-29T18:01:00Z"
+            },
+            {
                 "version": "1.1.0.3",
                 "changelog": "Add vorbiscomment config for free format audio tagging (vorbis-tool package)",
                 "targetAbi": "10.8.10.0",
